--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,12 @@
 [deps]
 BOSS = "15052f3f-a82a-4ca3-bbc4-f478a3bd1ae2"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+Juniper = "2ddba703-00a4-53a7-87a5-e8b9971dde84"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
