--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 OptimizationMOI = "fd9f6733-72f4-499f-8506-86b2bdd0dea1"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
+PRIMA = "0a7d04aa-8ac2-47b3-b7a7-9dbd6ad661ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [extras]
