--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,7 @@
 [deps]
 BOSS = "15052f3f-a82a-4ca3-bbc4-f478a3bd1ae2"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
