--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,8 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
+NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
+OptimizationOptimJL = "36348300-93cb-4f02-beb5-3c3902f8871e"
 PRIMA = "0a7d04aa-8ac2-47b3-b7a7-9dbd6ad661ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
